@@ -224,8 +224,10 @@ public class TownCommand implements CommandExecutor  {
                                 
                                 // if an Admin or essentials teleport isn't being used, use our own.
                                 if(isTownyAdmin) {
-                                        player.teleport(town.getSpawn());
-                                        return;
+                                	if (player.getVehicle() != null)
+			                    		player.getVehicle().eject();
+                                    player.teleport(town.getSpawn());
+                                    return;
 				                }
 				                
 				                if (!notUsingESS) {
@@ -234,6 +236,8 @@ public class TownCommand implements CommandExecutor  {
 				                                TownySettings.getTeleportWarmupTime()));
 				                        plugin.getTownyUniverse().requestTeleport(player, town);
 				                    } else { // Don't use teleport warmup
+				                    	if (player.getVehicle() != null)
+				                    		player.getVehicle().eject();
 				                        player.teleport(town.getSpawn());
 				                    }
 				                }
